Add Landing Page Information

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -282,7 +282,7 @@ http {
     }
 
     # Arkime
-    location / {
+    location /sessions {
       include /etc/nginx/nginx_auth_rt.conf;
       proxy_pass https://arkime;
       proxy_ssl_verify off;
@@ -290,6 +290,13 @@ http {
       proxy_set_header Host arkime.malcolm.local;
       proxy_set_header http_auth_http_user $authenticated_user;
       proxy_set_header Authorization "";
+    }
+
+    # Landing Page
+    location / {
+      include /etc/nginx/nginx_auth_rt.conf;
+      root /usr/share/nginx/landing;
+      try_files $uri $uri/index.html;
     }
   }
 
