--- a/nginx/nginx_readonly.conf
+++ b/nginx/nginx_readonly.conf
@@ -201,9 +201,22 @@ http {
       deny all;
     }
 
-    location / {
+    location /sessions {
       limit_except GET POST { deny  all; }
       proxy_pass https://arkime;
+      proxy_ssl_verify off;
+      proxy_redirect off;
+      proxy_set_header Host arkime.malcolm.local;
+      proxy_set_header http_auth_http_user $authenticated_user;
+      proxy_set_header Authorization "";
+    }
+
+    # Landing Page
+    location / {
+      include /etc/nginx/nginx_auth_rt.conf;
+      root /usr/share/nginx/html/;
+      try_files $uri $uri/index.html;
+      proxy_pass https://landing;
       proxy_ssl_verify off;
       proxy_redirect off;
       proxy_set_header Host arkime.malcolm.local;
