--- a/netbox/supervisord.conf
+++ b/netbox/supervisord.conf
@@ -41,6 +41,10 @@ command=/opt/netbox/venv/bin/python /usr/local/bin/netbox_init.py
   --library "%(ENV_NETBOX_DEVICETYPE_LIBRARY_PATH)s"
   --preload "%(ENV_NETBOX_PRELOAD_PATH)s"
   --preload-prefixes %(ENV_NETBOX_PRELOAD_PREFIXES)s
+  --postgres-host "%(ENV_DB_HOST)s"
+  --postgres-db "%(ENV_DB_NAME)s"
+  --postgres-user "%(ENV_DB_USER)s"
+  --postgres-password "%(ENV_DB_PASSWORD)s"
 autostart=true
 autorestart=false
 startsecs=0
