idaholab/Malcolm#295, specify local networks via ZEEK_LOCAL_NETS environment variable

--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -45,6 +45,7 @@ export ZEEK_LB_PROCS=1
 export ZEEK_LB_METHOD=custom
 export ZEEK_AF_PACKET_BUFFER_SIZE=67108864
 
+export ZEEK_LOCAL_NETS=
 export ZEEK_RULESET=local
 export ZEEK_INTEL_ITEM_EXPIRATION=-1min
 export ZEEK_INTEL_FEED_SINCE=
