Work in progress of idaholab/Malcolm#281, arkime-live container; done in arkime-capture branch

--- a/arkime/supervisord.conf
+++ b/arkime/supervisord.conf
@@ -6,6 +6,7 @@ chmod=0700
 
 [supervisord]
 nodaemon=true
+user=root
 logfile=/dev/null
 logfile_maxbytes=0
 pidfile=/tmp/supervisord.pid
@@ -28,6 +29,7 @@ directory=%(ENV_ARKIME_DIR)s
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
+user=%(ENV_PUSER)s
 
 [program:wise]
 command=/opt/wise_service.sh
@@ -40,6 +42,7 @@ killasgroup=true
 directory=%(ENV_ARKIME_DIR)s/wiseService
 stdout_logfile=%(ENV_ARKIME_DIR)s/logs/wise.log
 redirect_stderr=true
+user=%(ENV_PUSER)s
 
 [program:viewer]
 command=/opt/viewer_service.sh
@@ -53,25 +56,43 @@ directory=%(ENV_ARKIME_DIR)s
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
+user=%(ENV_PUSER)s
 
 [program:pcap-arkime]
 command=python3 /opt/pcap_arkime_processor.py %(ENV_PCAP_PIPELINE_VERBOSITY)s
   --start-sleep 10
-  --threads %(ENV_ARKIME_ANALYZE_PCAP_THREADS)s
+  --threads %(ENV_ARKIME_AUTO_ANALYZE_PCAP_THREADS)s
   --publisher "%(ENV_PCAP_MONITOR_HOST)s"
   --pcap-directory /data/pcap/processed
   --node "%(ENV_PCAP_NODE_NAME)s"
   --host "%(ENV_PCAP_NODE_HOST)s"
   --arkime /opt/arkime/bin/capture
+  --autoarkime "%(ENV_ARKIME_AUTO_ANALYZE_PCAP_FILES)s"
+  --forcearkime "%(ENV_ARKIME_ROTATED_PCAP)s"
   --autotag "%(ENV_AUTO_TAG)s"
   --managed "%(ENV_MANAGE_PCAP_FILES)s"
 startsecs=15
 startretries=1
-autostart=true
-autorestart=true
+autostart=%(ENV_ARKIME_PCAP_PROCESSOR)s
+autorestart=%(ENV_ARKIME_PCAP_PROCESSOR)s
 stopasgroup=true
 killasgroup=true
 directory=%(ENV_ARKIME_DIR)s
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
+user=%(ENV_PUSER)s
+
+[program:live-arkime]
+command=/opt/zeek/bin/zeekdeploy.sh
+autostart=%(ENV_ARKIME_LIVE_CAPTURE)s
+autorestart=%(ENV_ARKIME_LIVE_CAPTURE)s
+startsecs=180
+stopwaitsecs=15
+startretries=3
+stopasgroup=true
+killasgroup=true
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+user=%(ENV_PUSER)s
