--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -4,68 +4,80 @@
 #
 
 [default]
-elasticsearch=http://opensearch:9200
+antiSynDrop=false
+certFile=/opt/arkime/etc/viewer.crt
+compressES=false
 cronQueries=true
-rotateIndex=daily
-passwordSecret=Malcolm
+dropGroup=arkime
+dropUser=arkime
+elasticsearch=http://opensearch:9200
+freeSpaceG=10%
+geoLite2ASN=/opt/arkime/etc/GeoLite2-ASN.mmdb
+geoLite2Country=/opt/arkime/etc/GeoLite2-Country.mmdb
 httpRealm=Arkime
-userAuthIps=::,0.0.0.0/0
+icmpTimeout=10
 interface=eth0
+keyFile=/opt/arkime/etc/viewer.key
+logESRequests=false
+logEveryXPackets=500000
+logFileCreation=true
+logHTTPConnections=false
+logUnknownProtocols=false
+maxESConns=30
+maxESRequests=500
+maxFileSizeG=4
+maxFileTimeM=180
+maxPackets=10000
+maxReqBody=64
+maxStreams=1000000
+ouiFile=/opt/arkime/etc/oui.txt
+packetsPerPoll=50000
+parseQSValue=false
+parsersDir=/opt/arkime/parsers
+parseSMB=true
+parseSMTP=true
+passwordSecret=Malcolm
+pcapDir=/data/pcap/processed
+plugins=wise.so
+pluginsDir=/opt/arkime/plugins
+readTruncatedPackets=true
+reqBodyOnlyUtf8=true
+rirFile=/opt/arkime/etc/ipv4-address-space.csv
+rotateIndex=daily
+smtpIpHeaders=X-Originating-IP:;X-Barracuda-Apparent-Source-IP:
+spiDataMaxIndices=7
+supportSha256=false
+tcpSaveTimeout=720
+tcpTimeout=600
+udpTimeout=30
+uploadCommand=
+userAuthIps=::,0.0.0.0/0
+viewerPlugins=wise.js
+viewPort=8005
 wiseHost=127.0.0.1
 wisePort=8081
-pcapDir=/data/pcap/processed
-readTruncatedPackets=true
-maxFileSizeG=4
-tcpTimeout=600
-tcpSaveTimeout=720
-udpTimeout=30
-icmpTimeout=10
-maxStreams=1000000
-maxPackets=10000
-freeSpaceG=10%
-viewPort=8005
-certFile=/opt/arkime/etc/viewer.crt
-keyFile=/opt/arkime/etc/viewer.key
-geoLite2Country=/opt/arkime/etc/GeoLite2-Country.mmdb
-geoLite2ASN=/opt/arkime/etc/GeoLite2-ASN.mmdb
-rirFile=/opt/arkime/etc/ipv4-address-space.csv
-ouiFile=/opt/arkime/etc/oui.txt
-dropUser=arkime
-dropGroup=arkime
 # implicit auto-creation of users for Arkime (see https://github.com/arkime/arkime/pull/1120)
 # The userAutoCreateTmpl should more or less match what's in /etc/user_settings.json
 #    which is what's used when creating the default admin user.
 userNameHeader=http_auth_http_user
 userAutoCreateTmpl={"userId": "${this.http_auth_http_user}", "userName": "${this.http_auth_http_user}", "enabled": true, "createEnabled": false, "webEnabled": true, "headerAuthEnabled": true, "emailSearch": true, "removeEnabled": false, "packetSearch": true, "hideStats": false, "hideFiles": false, "hidePcap": false, "disablePcapDownload": false, "settings": { "timezone": "local", "detailFormat": "last", "showTimestamps": "last", "sortColumn": "firstPacket", "sortDirection": "desc", "spiGraph": "protocol", "connSrcField": "source.ip", "connDstField": "destination.ip", "numPackets": "last", "theme" : "custom1: #222222,#E2E2E2,#FFFFFF,#00789E,#004A79,#017D73,#092B40,#42b7c5,#2A7580,#ecb30a,#333333,#89ADCC,#6D6D6D,#FFE7E7,#ECFEFF", "manualQuery": false }, "tableStates": { "sessionsNew": { "order": [ [ "firstPacket", "desc" ] ], "visibleHeaders": [ "protocol", "event.provider", "event.dataset", "firstPacket", "lastPacket", "src", "source.port", "dst", "destination.port", "network.packets", "dbby", "tags", "info" ] } } }
-parseSMTP=true
-parseSMB=true
-parseQSValue=false
-supportSha256=false
-maxReqBody=64
-reqBodyOnlyUtf8=true
-smtpIpHeaders=X-Originating-IP:;X-Barracuda-Apparent-Source-IP:
-parsersDir=/opt/arkime/parsers
-pluginsDir=/opt/arkime/plugins
-plugins=wise.so
-viewerPlugins=wise.js
-spiDataMaxIndices=7
-uploadCommand=
-packetThreads=2
-pcapWriteMethod=simple
-pcapWriteSize=262143
-simpleCompression=zstd
-simpleZstdLevel=3
-compressES=false
-maxESConns=30
-maxESRequests=500
-packetsPerPoll=50000
-antiSynDrop=true
-logEveryXPackets=100000
-logUnknownProtocols=false
-logESRequests=true
-logFileCreation=true
 # temporarily disabling viewer autocomplete to see if it helps slugishness
 valueAutoComplete=false
+
+### High Performance settings
+# https://github.com/arkime/arkime/wiki/Settings#High_Performance_Settings
+magicMode=basic
+pcapReadMethod=tpacketv3
+tpacketv3NumThreads=2
+tpacketv3BlockSize=8388608
+pcapWriteMethod=simple
+pcapWriteSize=2560000
+simpleCompression=none
+simpleZstdLevel=3
+simpleGzipLevel=3
+packetThreads=2
+maxPacketsInQueue=300000
+dbBulkSize=4000000
 
 [custom-fields]
 # see https://docs.zeek.org/en/stable/script-reference/log-files.html for Zeek logfile documentation
