Work in progress of idaholab/Malcolm#281, arkime-live container; done in arkime-capture branch

--- a/arkime/supervisord.conf
+++ b/arkime/supervisord.conf
@@ -66,7 +66,7 @@ command=python3 /opt/pcap_arkime_processor.py %(ENV_PCAP_PIPELINE_VERBOSITY)s
   --pcap-directory /data/pcap/processed
   --node "%(ENV_PCAP_NODE_NAME)s"
   --host "%(ENV_PCAP_NODE_HOST)s"
-  --arkime /opt/arkime/bin/capture
+  --arkime "%(ENV_ARKIME_DIR)s"/bin/capture
   --autoarkime "%(ENV_ARKIME_AUTO_ANALYZE_PCAP_FILES)s"
   --forcearkime "%(ENV_ARKIME_ROTATED_PCAP)s"
   --autotag "%(ENV_AUTO_TAG)s"
@@ -84,15 +84,27 @@ redirect_stderr=true
 user=%(ENV_PUSER)s
 
 [program:live-arkime]
-command=/opt/zeek/bin/zeekdeploy.sh
+command="%(ENV_ARKIME_DIR)s"/bin/capture --insecure
+  -c "%(ENV_ARKIME_DIR)s"/etc/config.ini
+  -o pcapDir=/data/pcap/processed
+  -o bpf="%(ENV_CAPTURE_FILTER)s"
+  -o packetThreads=%(ENV_ARKIME_PACKET_THREADS)s
+  -o dropUser=%(ENV_PUSER)s
+  -o dropGroup=%(ENV_PGROUP)s
+  -o ecsEventProvider=arkime
+  -o ecsEventDataset=session
+  --node "%(ENV_PCAP_NODE_NAME)s"
+  --host "%(ENV_PCAP_NODE_HOST)s"
 autostart=%(ENV_ARKIME_LIVE_CAPTURE)s
 autorestart=%(ENV_ARKIME_LIVE_CAPTURE)s
-startsecs=180
+startsecs=30
+startretries=2000000000
 stopwaitsecs=15
-startretries=3
 stopasgroup=true
 killasgroup=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 user=%(ENV_PUSER)s
+directory=/data/pcap/processed
+
