--- a/config/arkime-live.env.example
+++ b/config/arkime-live.env.example
@@ -3,5 +3,6 @@
 ARKIME_LIVE_CAPTURE=false
 ARKIME_COMPRESSION_TYPE=none
 ARKIME_COMPRESSION_LEVEL=0
+ARKIME_PACKET_THREADS=1
 
 ARKIME_PCAP_PROCESSOR=false
