Work in progress of idaholab/Malcolm#281, arkime-live container; done in arkime-capture branch

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -17,6 +17,7 @@ geoLite2Country=/opt/arkime/etc/GeoLite2-Country.mmdb
 httpRealm=Arkime
 icmpTimeout=10
 interface=eth0
+bpf=
 keyFile=/opt/arkime/etc/viewer.key
 logESRequests=false
 logEveryXPackets=500000
