--- a/arkime/supervisord.conf
+++ b/arkime/supervisord.conf
@@ -87,14 +87,13 @@ user=%(ENV_PUSER)s
 command="%(ENV_ARKIME_DIR)s"/bin/capture --insecure
   -c "%(ENV_ARKIME_DIR)s"/etc/config.ini
   -o pcapDir=/data/pcap/processed
-  -o bpf="%(ENV_CAPTURE_FILTER)s"
   -o packetThreads=%(ENV_ARKIME_PACKET_THREADS)s
   -o dropUser=%(ENV_PUSER)s
   -o dropGroup=%(ENV_PGROUP)s
   -o ecsEventProvider=arkime
   -o ecsEventDataset=session
-  --node "%(ENV_PCAP_NODE_NAME)s"
-  --host "%(ENV_PCAP_NODE_HOST)s"
+  --node "%(ENV_ARKIME_LIVE_NODE_NAME)s"
+  --host "%(ENV_ARKIME_LIVE_NODE_HOST)s"
 autostart=%(ENV_ARKIME_LIVE_CAPTURE)s
 autorestart=%(ENV_ARKIME_LIVE_CAPTURE)s
 startsecs=30
@@ -105,6 +104,6 @@ killasgroup=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
-user=%(ENV_PUSER)s
+user=root
 directory=/data/pcap/processed
 
