--- a/sensor-iso/interface/sensor_ctl/arkime/config.ini
+++ b/sensor-iso/interface/sensor_ctl/arkime/config.ini
@@ -12,6 +12,7 @@ geoLite2ASN=/dummy/GeoLite2-ASN.mmdb
 geoLite2Country=/dummy/GeoLite2-Country.mmdb
 httpRealm=Arkime
 icmpTimeout=10
+bpf=
 interface=enp0s1
 logESRequests=false
 logEveryXPackets=500000
