--- a/config/arkime-live.env.example
+++ b/config/arkime-live.env.example
@@ -1,8 +1,16 @@
+ARKIME_VIEWER_PORT=8006
 # Whether or Arkime should monitor live traffic on a local
 #   interface (PCAP_IFACE in pcap-capture.env specifies interface)
 ARKIME_LIVE_CAPTURE=false
 ARKIME_COMPRESSION_TYPE=none
 ARKIME_COMPRESSION_LEVEL=0
 ARKIME_PACKET_THREADS=1
+
+# The node name (e.g., the hostname of this machine running Malcolm) to associate with
+#   network traffic metadata
+ARKIME_LIVE_NODE_NAME=malcolm
+# The node host (e.g., the IP address of the machine running Malcolm) to associate with
+#   network traffic metadata (optional, defaults to PCAP_NODE_NAME if unspecified)
+ARKIME_LIVE_NODE_HOST=
 
 ARKIME_PCAP_PROCESSOR=false
