Work in progress of idaholab/Malcolm#281, arkime-live container; done in arkime-capture branch

--- a/arkime/supervisord.conf
+++ b/arkime/supervisord.conf
@@ -21,7 +21,7 @@ serverurl=unix:///tmp/supervisor.sock
 command=/opt/initarkime.sh
 startsecs=0
 startretries=0
-autostart=true
+autostart=%(ENV_ARKIME_PCAP_PROCESSOR)s
 autorestart=false
 stopasgroup=true
 killasgroup=true
@@ -84,16 +84,7 @@ redirect_stderr=true
 user=%(ENV_PUSER)s
 
 [program:live-arkime]
-command="%(ENV_ARKIME_DIR)s"/bin/capture --insecure
-  -c "%(ENV_ARKIME_DIR)s"/etc/config.ini
-  -o pcapDir=/data/pcap/processed
-  -o packetThreads=%(ENV_ARKIME_PACKET_THREADS)s
-  -o dropUser=%(ENV_PUSER)s
-  -o dropGroup=%(ENV_PGROUP)s
-  -o ecsEventProvider=arkime
-  -o ecsEventDataset=session
-  --node "%(ENV_ARKIME_LIVE_NODE_NAME)s"
-  --host "%(ENV_ARKIME_LIVE_NODE_HOST)s"
+command=/opt/live_capture.sh
 autostart=%(ENV_ARKIME_LIVE_CAPTURE)s
 autorestart=%(ENV_ARKIME_LIVE_CAPTURE)s
 startsecs=30
