Work in progress of idaholab/Malcolm#281, arkime-live container; done in arkime-capture branch

--- a/arkime/supervisord.conf
+++ b/arkime/supervisord.conf
@@ -40,7 +40,8 @@ autorestart=true
 stopasgroup=true
 killasgroup=true
 directory=%(ENV_ARKIME_DIR)s/wiseService
-stdout_logfile=%(ENV_ARKIME_DIR)s/logs/wise.log
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
 redirect_stderr=true
 user=%(ENV_PUSER)s
 
@@ -95,6 +96,6 @@ killasgroup=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
-user=root
+user=root   ; fear not, capture will dropUser/dropGroup to PUSER
 directory=/data/pcap/processed
 
