idaholab/Malcolm#301, allow configuration of docker's logging driver to prevent disk-exhaustion

--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -2,6 +2,14 @@
 
 version: '3.7'
 
+x-logging:
+  &default-logging
+  driver: local
+  options:
+    max-size: 200m
+    max-file: 2
+    compress: "false"
+
 services:
   opensearch:
     image: ghcr.io/idaholab/malcolm/opensearch:23.11.0
@@ -10,6 +18,7 @@ services:
     #   start but not actually run OpenSearch. It's included in both profiles to
     #   satisfy some other containers' depends_on.
     profiles: ["malcolm", "hedgehog"]
+    logging: *default-logging
     restart: "no"
     stdin_open: false
     tty: true
@@ -44,6 +53,7 @@ services:
   dashboards-helper:
     image: ghcr.io/idaholab/malcolm/dashboards-helper:23.11.0
     profiles: ["malcolm"]
+    logging: *default-logging
     restart: "no"
     stdin_open: false
     tty: true
@@ -73,6 +83,7 @@ services:
   dashboards:
     image: ghcr.io/idaholab/malcolm/dashboards:23.11.0
     profiles: ["malcolm"]
+    logging: *default-logging
     restart: "no"
     stdin_open: false
     tty: true
@@ -100,6 +111,7 @@ services:
   logstash:
     image: ghcr.io/idaholab/malcolm/logstash-oss:23.11.0
     profiles: ["malcolm"]
+    logging: *default-logging
     restart: "no"
     stdin_open: false
     tty: true
@@ -143,6 +155,7 @@ services:
   filebeat:
     image: ghcr.io/idaholab/malcolm/filebeat-oss:23.11.0
     profiles: ["malcolm", "hedgehog"]
+    logging: *default-logging
     restart: "no"
     stdin_open: false
     tty: true
@@ -178,6 +191,7 @@ services:
     image: ghcr.io/idaholab/malcolm/arkime:23.11.0
     # todo: viewer/wise in hedgehog profile (and what about nginx reaching back?)
     profiles: ["malcolm", "hedgehog"]
+    logging: *default-logging
     restart: "no"
     stdin_open: false
     tty: true
@@ -217,6 +231,7 @@ services:
   zeek:
     image: ghcr.io/idaholab/malcolm/zeek:23.11.0
     profiles: ["malcolm", "hedgehog"]
+    logging: *default-logging
     restart: "no"
     stdin_open: false
     tty: true
@@ -256,6 +271,7 @@ services:
   zeek-live:
     image: ghcr.io/idaholab/malcolm/zeek:23.11.0
     profiles: ["malcolm", "hedgehog"]
+    logging: *default-logging
     restart: "no"
     stdin_open: false
     tty: true
@@ -285,6 +301,7 @@ services:
   suricata:
     image: ghcr.io/idaholab/malcolm/suricata:23.11.0
     profiles: ["malcolm", "hedgehog"]
+    logging: *default-logging
     restart: "no"
     stdin_open: false
     tty: true
@@ -320,6 +337,7 @@ services:
   suricata-live:
     image: ghcr.io/idaholab/malcolm/suricata:23.11.0
     profiles: ["malcolm", "hedgehog"]
+    logging: *default-logging
     restart: "no"
     stdin_open: false
     tty: true
@@ -347,6 +365,7 @@ services:
   file-monitor:
     image: ghcr.io/idaholab/malcolm/file-monitor:23.11.0
     profiles: ["malcolm", "hedgehog"]
+    logging: *default-logging
     restart: "no"
     stdin_open: false
     tty: true
@@ -374,6 +393,7 @@ services:
   pcap-capture:
     image: ghcr.io/idaholab/malcolm/pcap-capture:23.11.0
     profiles: ["malcolm", "hedgehog"]
+    logging: *default-logging
     restart: "no"
     stdin_open: false
     tty: true
@@ -397,6 +417,7 @@ services:
   pcap-monitor:
     image: ghcr.io/idaholab/malcolm/pcap-monitor:23.11.0
     profiles: ["malcolm", "hedgehog"]
+    logging: *default-logging
     restart: "no"
     stdin_open: false
     tty: true
@@ -424,6 +445,7 @@ services:
   upload:
     image: ghcr.io/idaholab/malcolm/file-upload:23.11.0
     profiles: ["malcolm"]
+    logging: *default-logging
     restart: "no"
     stdin_open: false
     tty: true
@@ -450,6 +472,7 @@ services:
   htadmin:
     image: ghcr.io/idaholab/malcolm/htadmin:23.11.0
     profiles: ["malcolm"]
+    logging: *default-logging
     restart: "no"
     stdin_open: false
     tty: true
@@ -476,6 +499,7 @@ services:
   freq:
     image: ghcr.io/idaholab/malcolm/freq:23.11.0
     profiles: ["malcolm"]
+    logging: *default-logging
     restart: "no"
     stdin_open: false
     tty: true
@@ -499,6 +523,7 @@ services:
   netbox:
     image: ghcr.io/idaholab/malcolm/netbox:23.11.0
     profiles: ["malcolm"]
+    logging: *default-logging
     restart: "no"
     stdin_open: false
     tty: true
@@ -532,6 +557,7 @@ services:
   netbox-postgres:
     image: ghcr.io/idaholab/malcolm/postgresql:23.11.0
     profiles: ["malcolm"]
+    logging: *default-logging
     restart: "no"
     stdin_open: false
     tty: true
@@ -557,6 +583,7 @@ services:
   netbox-redis:
     image: ghcr.io/idaholab/malcolm/redis:23.11.0
     profiles: ["malcolm"]
+    logging: *default-logging
     restart: "no"
     stdin_open: false
     tty: true
@@ -586,6 +613,7 @@ services:
   netbox-redis-cache:
     image: ghcr.io/idaholab/malcolm/redis:23.11.0
     profiles: ["malcolm"]
+    logging: *default-logging
     restart: "no"
     stdin_open: false
     tty: true
@@ -614,6 +642,7 @@ services:
   api:
     image: ghcr.io/idaholab/malcolm/api:23.11.0
     profiles: ["malcolm"]
+    logging: *default-logging
     command: gunicorn --bind 0:5000 manage:app
     restart: "no"
     stdin_open: false
@@ -640,6 +669,7 @@ services:
   nginx-proxy:
     image: ghcr.io/idaholab/malcolm/nginx-proxy:23.11.0
     profiles: ["malcolm"]
+    logging: *default-logging
     restart: "no"
     stdin_open: false
     tty: true
