--- a/config/arkime.env.example
+++ b/config/arkime.env.example
@@ -1,3 +1,4 @@
+ARKIME_VIEWER_PORT=8005
 # Whether or not Arkime is allowed to delete uploaded/captured PCAP (see
 #   https://arkime.com/faq#pcap-deletion)
 MANAGE_PCAP_FILES=false
