--- a/kubernetes/11-suricata.yml
+++ b/kubernetes/11-suricata.yml
@@ -59,6 +59,8 @@ spec:
             name: suricata-offline-suricata-logs-volume
           - mountPath: "/opt/suricata/rules/configmap"
             name: suricata-offline-custom-rules-volume
+          - mountPath: "/opt/suricata/include-configs/configmap"
+            name: suricata-offline-custom-configs-volume
       initContainers:
       - name: suricata-offline-dirinit-container
         image: ghcr.io/idaholab/malcolm/dirinit:v23.11.0
@@ -87,3 +89,6 @@ spec:
         - name: suricata-offline-custom-rules-volume
           configMap:
             name: suricata-rules
+        - name: suricata-offline-custom-configs-volume
+          configMap:
+            name: suricata-configs
