--- a/config/zeek-live.env.example
+++ b/config/zeek-live.env.example
@@ -6,4 +6,5 @@ ZEEK_PCAP_PROCESSOR=false
 ZEEK_CRON=true
 ZEEK_LOG_PATH=/zeek/live
 ZEEK_INTEL_PATH=/opt/zeek/share/zeek/site/intel
+ZEEK_CUSTOM_PATH=/opt/zeek/share/zeek/site/custom
 EXTRACT_FILES_PATH=/zeek/extract_files
