--- a/kubernetes/22-suricata-live.yml
+++ b/kubernetes/22-suricata-live.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: suricata-live-container
-        image: ghcr.io/idaholab/malcolm/suricata:v23.12.0
+        image: ghcr.io/idaholab/malcolm/suricata:23.12.0
         imagePullPolicy: Always
         stdin: false
         tty: true
@@ -55,7 +55,7 @@ spec:
             name: suricata-live-custom-configs-volume
       initContainers:
       - name: suricata-live-dirinit-container
-        image: ghcr.io/idaholab/malcolm/dirinit:v23.12.0
+        image: ghcr.io/idaholab/malcolm/dirinit:23.12.0
         imagePullPolicy: Always
         stdin: false
         tty: true
