--- a/kubernetes/10-zeek.yml
+++ b/kubernetes/10-zeek.yml
@@ -63,12 +63,10 @@ spec:
           - mountPath: "/zeek/upload"
             name: zeek-offline-zeek-volume
             subPath: "upload"
-          - mountPath: "/opt/zeek/share/zeek/site/intel"
-            name: zeek-offline-zeek-intel-and-config
-            subPath: "zeek/intel"
           - mountPath: "/opt/zeek/share/zeek/site/custom"
-            name: zeek-offline-zeek-intel-and-config
-            subPath: "zeek/custom"
+            name: zeek-offline-custom-volume
+          - mountPath: "/opt/zeek/share/zeek/site/intel/configmap"
+            name: zeek-offline-intel-volume
       initContainers:
       - name: zeek-offline-dirinit-container
         image: ghcr.io/idaholab/malcolm/dirinit:23.12.0
@@ -80,10 +78,8 @@ spec:
               name: process-env
         env:
           - name: PUSER_MKDIR
-            value: "/data/config:zeek/intel/MISP,zeek/intel/STIX,zeek/custom;/data/pcap:processed;/data/zeek-logs:current,extract_files/preserved,extract_files/quarantine,live,processed,upload"
+            value: "/data/pcap:processed;/data/zeek-logs:current,extract_files/preserved,extract_files/quarantine,live,processed,upload"
         volumeMounts:
-          - name: zeek-offline-zeek-intel-and-config
-            mountPath: "/data/config"
           - name: zeek-offline-pcap-volume
             mountPath: "/data/pcap"
           - name: zeek-offline-zeek-volume
@@ -98,6 +94,9 @@ spec:
         - name: zeek-offline-zeek-volume
           persistentVolumeClaim:
             claimName: zeek-claim
-        - name: zeek-offline-zeek-intel-and-config
-          persistentVolumeClaim:
-            claimName: config-claim
+        - name: zeek-offline-custom-volume
+          configMap:
+            name: zeek-custom
+        - name: zeek-offline-intel-volume
+          configMap:
+            name: zeek-intel
