--- a/kubernetes/10-zeek.yml
+++ b/kubernetes/10-zeek.yml
@@ -65,8 +65,11 @@ spec:
             subPath: "upload"
           - mountPath: "/opt/zeek/share/zeek/site/custom"
             name: zeek-offline-custom-volume
-          - mountPath: "/opt/zeek/share/zeek/site/intel/configmap"
+          - mountPath: "/opt/zeek/share/zeek/site/intel-preseed"
+            name: zeek-offline-intel-preseed-volume
+          - mountPath: "/opt/zeek/share/zeek/site/intel"
             name: zeek-offline-intel-volume
+            subPath: "zeek/intel"
       initContainers:
       - name: zeek-offline-dirinit-container
         image: ghcr.io/idaholab/malcolm/dirinit:23.12.0
@@ -78,8 +81,10 @@ spec:
               name: process-env
         env:
           - name: PUSER_MKDIR
-            value: "/data/pcap:processed;/data/zeek-logs:current,extract_files/preserved,extract_files/quarantine,live,processed,upload"
+            value: "/data/config:zeek/intel/MISP,zeek/intel/STIX;/data/pcap:processed;/data/zeek-logs:current,extract_files/preserved,extract_files/quarantine,live,processed,upload"
         volumeMounts:
+          - name: zeek-offline-intel-volume
+            mountPath: "/data/config"
           - name: zeek-offline-pcap-volume
             mountPath: "/data/pcap"
           - name: zeek-offline-zeek-volume
@@ -97,6 +102,9 @@ spec:
         - name: zeek-offline-custom-volume
           configMap:
             name: zeek-custom
-        - name: zeek-offline-intel-volume
+        - name: zeek-offline-intel-preseed-volume
           configMap:
-            name: zeek-intel
+            name: zeek-intel-preseed
+        - name: zeek-offline-intel-volume
+          persistentVolumeClaim:
+            claimName: config-claim
