--- a/kubernetes/21-zeek-live.yml
+++ b/kubernetes/21-zeek-live.yml
@@ -57,8 +57,11 @@ spec:
             subPath: "upload"
           - mountPath: "/opt/zeek/share/zeek/site/custom"
             name: zeek-live-custom-volume
-          - mountPath: "/opt/zeek/share/zeek/site/intel/configmap"
+          - mountPath: "/opt/zeek/share/zeek/site/intel-preseed"
+            name: zeek-live-intel-preseed-volume
+          - mountPath: "/opt/zeek/share/zeek/site/intel"
             name: zeek-live-intel-volume
+            subPath: "zeek/intel"
       initContainers:
       - name: zeek-live-dirinit-container
         image: ghcr.io/idaholab/malcolm/dirinit:23.12.0
@@ -70,8 +73,10 @@ spec:
               name: process-env
         env:
           - name: PUSER_MKDIR
-            value: "/data/zeek-logs:current,extract_files/preserved,extract_files/quarantine,live,processed,upload"
+            value: "/data/config:zeek/intel/MISP,zeek/intel/STIX;/data/zeek-logs:current,extract_files/preserved,extract_files/quarantine,live,processed,upload"
         volumeMounts:
+          - name: zeek-live-intel-volume
+            mountPath: "/data/config"
           - name: zeek-live-zeek-volume
             mountPath: "/data/zeek-logs"
       volumes:
@@ -84,6 +89,9 @@ spec:
         - name: zeek-live-custom-volume
           configMap:
             name: zeek-custom
-        - name: zeek-live-intel-volume
+        - name: zeek-live-intel-preseed-volume
           configMap:
-            name: zeek-intel
+            name: zeek-intel-preseed
+        - name: zeek-live-intel-volume
+          persistentVolumeClaim:
+            claimName: config-claim
