surface .env variable for zeek intel refresh threads

--- a/config/zeek.env.example
+++ b/config/zeek.env.example
@@ -12,6 +12,8 @@ ZEEK_INTEL_FEED_SINCE=
 # Specifies a cron expression indicating the refresh interval for generating the
 #   Zeek Intelligence Framework files ('' disables automatic refresh)
 ZEEK_INTEL_REFRESH_CRON_EXPRESSION=
+# Number of threads to use for querying feeds for generating Zeek Intelligence Framework files
+ZEEK_INTEL_REFRESH_THREADS=2
 # Determines the file extraction behavior for file transfers detected by Zeek
 ZEEK_EXTRACTOR_MODE=none
 # Whether or not to use polling vs. native inotify API to watch for files
